@@ -4,6 +4,7 @@ version 0.11.0:
 	* Minor GUI changes
 	* ICQ Alias problem fixed
 	* Negative times fixed
+	* Cannot create blank away messages/messages with blank titles
 
 version 0.11.0-pre4:
 	* ICQ upgraded to use icqlib 1.1.0
